<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    tools:context=".activities.Track"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/artworkContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/c_grey_lighter"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp">

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="32dp"
                android:elevation="3dp">

                <ImageView
                    android:id="@+id/artwork"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/artwork_placeholder" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/trackName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/collectionName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/toPlaylist"
            android:layout_below="@+id/artworkContainer"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">


                <RelativeLayout
                    android:id="@+id/playPause"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/shape_fab_primary"
                    android:gravity="center">

                    <im.dnn.labs.mjbestsongs.customviews.SimpleLineIcon
                        android:id="@+id/playIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/c_white"
                        android:textSize="16sp"
                        app:si_icon="control_play" />

                    <im.dnn.labs.mjbestsongs.customviews.SimpleLineIcon
                        android:id="@+id/pauseIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/c_white"
                        android:textSize="16sp"
                        app:si_icon="control_pause"
                        android:visibility="gone" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/purchase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dollar"
                        android:textColor="@color/c_green_primary"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/trackPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/c_green_primary"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/c_green_primary"
                        android:textSize="22sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/toPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View style="@style/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/c_white"
                android:gravity="center"
                android:padding="12dp">

                <im.dnn.labs.mjbestsongs.customviews.SimpleLineIcon
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:textColor="@color/c_grey_primary"
                    android:textSize="14sp"
                    app:si_icon="playlist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/back_to_playlist"
                    android:textColor="@color/c_grey_primary"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
